--- a/package.json
+++ b/package.json
@@ -10,8 +10,20 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@nuxtjs/dotenv": "^1.4.2",
+    "@supabase/supabase-js": "^2.48.1",
+    "@tailwindcss/vite": "^4.0.0",
+    "latest": "^0.2.0",
     "nuxt": "^3.15.3",
+    "supabase": "^2.6.8",
     "vue": "latest",
     "vue-router": "latest"
+  },
+  "devDependencies": {
+    "@types/node": "^22.10.10",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^4.0.0",
+    "typescript": "^5.7.3"
   }
 }
