--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "@nuxtjs/dotenv": "^1.4.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.0",
+    "@vueuse/core": "^12.5.0",
+    "animate.css": "^4.1.1",
+    "gsap": "^3.12.7",
     "latest": "^0.2.0",
     "nuxt": "^3.15.3",
     "supabase": "^2.6.8",
