--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
-    "@nuxtjs/dotenv": "^1.4.2",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^12.5.0",
@@ -18,12 +17,13 @@
     "gsap": "^3.12.7",
     "latest": "^0.2.0",
     "nuxt": "^3.15.3",
-    "supabase": "^2.6.8",
+    "three": "^0.173.0",
     "vue": "latest",
-    "vue-router": "latest"
+    "vue-router": "latest",
+    "vue-starport": "^0.4.0"
   },
   "devDependencies": {
-    "@types/node": "^22.10.10",
+    "@types/node": "^22.13.1",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.5.1",
     "tailwindcss": "^4.0.0",
