--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google/model-viewer": "^4.0.0",
+    "@headlessui/vue": "^1.7.23",
     "@supabase/supabase-js": "^2.48.1",
     "@tailwindcss/vite": "^4.0.0",
     "@vueuse/core": "^12.5.0",
